# template-python

./: .editorconfig  .env.example  .git_archival.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  test.md  test2.md  test_link.md  test_snippet.md  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _build_container.yml  _build_package.yml  _docs.yml  _link-check.yml  _pr_comment.yml  _publish.yml  _quality.yml  _security.yml  _tests.yml  development.yml  development_cleanup.yml  main.yml  nightly.yml  pr_comment.yml  release.yml  weekly.yml
dev/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
dev/community/: index.html
dev/community/agents/: index.html
dev/community/code-of-conduct/: index.html
dev/community/contributing/: index.html
dev/community/developing/: index.html
dev/community/security/: index.html
dev/community/support/: index.html
dev/coverage/e2e/: coverage.xml
dev/coverage/integration/: coverage.xml
dev/coverage/unit/: coverage.xml
dev/examples/: index.html
dev/getting-started/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/getting-started/workflows/: index.html
dev/guides/: index.html
dev/guides/github-workflows/: index.html
dev/guides/repository-setup/: index.html
dev/reference/: index.html
dev/reference/api/: index.html
dev/search/: search_index.json
docs/: README.md  index.md
docs/community/: agents.md  code-of-conduct.md  contributing.md  developing.md  index.md  security.md  support.md
docs/examples/: index.md
docs/getting-started/: index.md  installation.md  quickstart.md  workflows.md
docs/guides/: github-workflows.md  index.md  repository-setup.md
docs/reference/: api.md  index.md
examples/: README.md
examples/example_template/: README.md  main.py  requirements.txt
nightly/: 404.html  index.html  sitemap.xml
nightly/community/: index.html
nightly/community/agents/: index.html
nightly/community/code-of-conduct/: index.html
nightly/community/contributing/: index.html
nightly/community/developing/: index.html
nightly/community/security/: index.html
nightly/community/support/: index.html
nightly/coverage/unit/: coverage.xml
nightly/examples/: index.html
nightly/getting-started/: index.html
nightly/getting-started/installation/: index.html
nightly/getting-started/quickstart/: index.html
nightly/guides/: index.html
nightly/guides/github-workflows/: index.html
nightly/guides/repository-setup/: index.html
nightly/reference/: index.html
nightly/reference/api/: index.html
pr-1/: 404.html  index.html  objects.inv  sitemap.xml
pr-1/community/: index.html
pr-1/community/agents/: index.html
pr-1/community/code-of-conduct/: index.html
pr-1/community/contributing/: index.html
pr-1/community/developing/: index.html
pr-1/community/security/: index.html
pr-1/community/support/: index.html
pr-1/coverage/integration/: coverage.xml
pr-1/coverage/unit/: coverage.xml
pr-1/examples/: index.html
pr-1/getting-started/: index.html
pr-1/getting-started/installation/: index.html
pr-1/getting-started/quickstart/: index.html
pr-1/getting-started/workflows/: index.html
pr-1/guides/: index.html
pr-1/reference/: index.html
pr-1/search/: search_index.json
pr-1/stylesheets/: extra.css
pr-6/: 404.html  index.html  sitemap.xml
pr-6/community/: index.html
pr-6/community/agents/: index.html
pr-6/community/code-of-conduct/: index.html
pr-6/community/contributing/: index.html
pr-6/community/developing/: index.html
pr-6/community/security/: index.html
pr-6/community/support/: index.html
pr-6/coverage/integration/: coverage.xml
pr-6/coverage/unit/: coverage.xml
pr-6/examples/: index.html
pr-6/getting-started/: index.html
pr-6/getting-started/installation/: index.html
pr-6/getting-started/quickstart/: index.html
pr-6/guides/: index.html
pr-6/guides/github-workflows/: index.html
pr-6/guides/repository-setup/: index.html
pr-6/reference/: index.html
pr-6/search/: search_index.json
scripts/: README.md  bootstrap.py  bootstrap.sh
src/project_name/: .gitkeep  __init__.py  __main__.py  compat.py  logging.py  settings.py
src/template_python/: __init__.py  __main__.py  compat.py  logging.py  settings.py
tests/: README.md
tests/e2e/: .gitkeep  __init__.py  test_bootstrap.py  test_e2e.py  test_main.py
tests/integration/: .gitkeep  test_integration.py
tests/unit/: .gitkeep  test_bootstrap.py  test_compat.py  test_init.py  test_logging.py  test_settings.py  test_unit.py  test_version.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/community/: index.html
v0.1.0/community/agents/: index.html
v0.1.0/community/code-of-conduct/: index.html
v0.1.0/community/contributing/: index.html
v0.1.0/community/developing/: index.html
v0.1.0/community/security/: index.html
v0.1.0/community/support/: index.html
v0.1.0/examples/: index.html
v0.1.0/getting-started/: index.html
v0.1.0/getting-started/installation/: index.html
v0.1.0/getting-started/quickstart/: index.html
v0.1.0/guides/: index.html
v0.1.0/guides/github-workflows/: index.html
v0.1.0/guides/repository-setup/: index.html
v0.1.0/reference/: index.html
v0.1.0/reference/api/: index.html
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/community/: index.html
v0.2.0/community/agents/: index.html
v0.2.0/community/code-of-conduct/: index.html
v0.2.0/community/contributing/: index.html
v0.2.0/community/developing/: index.html
v0.2.0/community/security/: index.html
v0.2.0/examples/: index.html
v0.2.0/getting-started/: index.html
v0.2.0/guides/: index.html
v0.2.0/reference/: index.html
v0.2.0/scripts/: extra.js  gen_ref_pages.py
(+142 files in other folders)
