[build-system]
requires = ["hatchling", "gitversioned[hatchling]"]
build-backend = "hatchling.build"

[project]
name = "project_name"
dynamic = ["version"]
description = "{{project_description}}"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "{{organization}}" }]
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
opentelemetry = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]

[dependency-groups]
dev = [
    # testing
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.1",
    "pytest-mock~=3.15",
    "respx~=0.23",

    # code quality
    "mypy~=2.1",
    "pre-commit~=4.1",
    "ruff~=0.15",

    # docs quality
    "mdformat~=1.0",
    "mdformat-frontmatter~=2.0",
    "mdformat-gfm~=1.0",

    # general and configurations
    "yamlfix~=1.19",
]
docs = [
    # documentation
    "mike~=2.2",
    "mkdocs~=1.6",
    "mkdocstrings[python]~=1.0",
    "mkdocs-macros-plugin~=1.5",
    "mkdocs-material~=9.7",
    "mkdocs-minify-plugin~=0.8",
    "mkdocs-nav-weight~=0.3",
    "mkdocs-section-index~=0.3",
    "pymdown-extensions~=10.21",
]

[project.scripts]
project_name = "project_name.__main__:main"

[project.urls]
Homepage = "https://github.com/{{org_name}}/{{project_name}}"
Repository = "https://github.com/{{org_name}}/{{project_name}}.git"
Issues = "https://github.com/{{org_name}}/{{project_name}}/issues"

[tool.hatch.version]
source = "gitversioned"

[tool.gitversioned]
source_type = ["tag"]

[tool.gitversioned.auto_increment]
pre = "minor"
dev = "patch"

# ==============================================================================
# Hatch Environment Configurations
# ==============================================================================

[tool.hatch.envs.default]
dependency-groups = ["dev"]

# ------------------------------------------------------------------------------
# Quality & Style: Ruff, mdformat, yamlfix
# ------------------------------------------------------------------------------
[tool.hatch.envs.lint]
detached = true
dependency-groups = ["dev"]

[tool.hatch.envs.lint.scripts]
# Quality checks (Read-only)
check = [
  "ruff check {args:docs examples scripts src tests .github}",
  "ruff format --check {args:docs examples scripts src tests .github}",
  "mdformat --check {args:docs examples scripts src tests .github *.md}",
  "yamlfix --check {args:docs examples scripts src tests .github *.yml .*.yaml}",
]
pre-commit = "SKIP=type-check pre-commit run --all-files --show-diff-on-failure"
# Style runs (Applies fixes)
format = [
  "ruff check --fix {args:docs examples scripts src tests .github}",
  "ruff format {args:docs examples scripts src tests .github}",
  "mdformat {args:docs examples scripts src tests .github *.md}",
  "yamlfix {args:docs examples scripts src tests .github *.yml .*.yaml}",
]

# ------------------------------------------------------------------------------
# Type Checking: Mypy
# ------------------------------------------------------------------------------
[tool.hatch.envs.types]
# Needs project dependencies to resolve imports
template = "default"

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:examples scripts src tests}"

# ------------------------------------------------------------------------------
# Testing: Pytest with segmented coverage
# ------------------------------------------------------------------------------
[tool.hatch.envs.test]
# Use the default env which contains pytest and pytest-cov
template = "default"

[tool.hatch.envs.test.scripts]
# Standard runs (no coverage)
all = "pytest tests {args}"
unit = "pytest tests/unit {args}"
integration = "pytest tests/integration {args}"
e2e = "pytest tests/e2e {args}"

# Coverage specific runs
# These use --cov=src to ensure only your source code is measured
unit-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html:docs/coverage/unit/htmlcov tests/unit {args}"
integration-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html:docs/coverage/integration/htmlcov tests/integration {args}"
e2e-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html:docs/coverage/e2e/htmlcov tests/e2e {args}"
# Full suite coverage
all-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html:docs/coverage/all/htmlcov tests {args}"

# ------------------------------------------------------------------------------
# Documentation: MkDocs
# ------------------------------------------------------------------------------
[tool.hatch.envs.docs]
detached = true
dependency-groups = ["docs"]

[tool.hatch.envs.docs.env-vars]
DISABLE_MKDOCS_2_WARNING = "true"

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr 0.0.0.0:8000"

# ------------------------------------------------------------------------------
# Build Configuration (hatch build)
# ------------------------------------------------------------------------------
[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project_name"]


# --- Tool Configurations ---
[tool.mypy]
files = ["src/project_name", "tests"]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
namespace_packages = true
exclude = ["venv", "build", "dist", ".venv", "examples/.*/setup\\.py"]
follow_imports = "normal"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["build", "dist", "env", ".venv", "src/project_name/version.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    "COM812",  # ignore trailing comma errors due to older Python versions
    "ISC001",  # implicit string concatenation (often disabled when using ruff format)
    "PD011",   # ignore .values usage since ruff assumes it's a Pandas DataFrame
    "PLR0913", # ignore too many arguments in function definitions
    "PLW1514", # allow Path.open without encoding
    "RET505",  # allow `else` blocks
    "RET506",  # allow `else` blocks
    "S311",    # allow standard pseudo-random generators
    "TC001",   # ignore imports used only for type checking
    "TC002",   # ignore imports used only for type checking
    "TC003",   # ignore imports used only for type checking
]
select = [
    # Rules reference: https://docs.astral.sh/ruff/rules/

    # Code Style / Formatting
    "E",      # pycodestyle: checks adherence to PEP 8 conventions including spacing, indentation, and line length
    "W",      # pycodestyle: checks adherence to PEP 8 conventions including spacing, indentation, and line length
    "A",      # flake8-builtins: prevents shadowing of Python built-in names
    "C",      # Convention: ensures code adheres to specific style and formatting conventions
    "COM",    # flake8-commas: enforces the correct use of trailing commas
    "ERA",    # eradicate: detects commented-out code that should be removed
    "I",      # isort: ensures imports are sorted in a consistent manner
    "ICN",    # flake8-import-conventions: enforces import conventions for better readability
    "N",      # pep8-naming: enforces PEP 8 naming conventions for classes, functions, and variables
    "NPY",    # NumPy: enforces best practices for using the NumPy library
    "PD",     # pandas-vet: enforces best practices for using the pandas library
    "PT",     # flake8-pytest-style: enforces best practices and style conventions for pytest tests
    "PTH",    # flake8-use-pathlib: encourages the use of pathlib over os.path for file system operations
    "Q",      # flake8-quotes: enforces consistent use of single or double quotes
    "TCH",    # flake8-type-checking: enforces type checking practices and standards
    "TID",    # flake8-tidy-imports: enforces tidy and well-organized imports
    "RUF022", # flake8-ruff: enforce sorting of __all__ in modules

    # Code Structure / Complexity
    "C4",  # flake8-comprehensions: improves readability and performance of list, set, and dict comprehensions
    "C90", # mccabe: checks for overly complex code using cyclomatic complexity
    "ISC", # flake8-implicit-str-concat: prevents implicit string concatenation
    "PIE", # flake8-pie: identifies and corrects common code inefficiencies and mistakes
    "R",   # Refactor: suggests improvements to code structure and readability
    "SIM", # flake8-simplify: simplifies complex expressions and improves code readability

    # Code Security / Bug Prevention
    "ARG",   # flake8-unused-arguments: detects unused function and method arguments
    "ASYNC", # flake8-async: identifies incorrect or inefficient usage patterns in asynchronous code
    "B",     # flake8-bugbear: detects common programming mistakes and potential bugs
    "BLE",   # flake8-blind-except: prevents blind exceptions that catch all exceptions without handling
    "E",     # Error: detects and reports errors in the code
    "F",     # Pyflakes: detects unused imports, shadowed imports, undefined variables, and various formatting errors in string operations
    "INP",   # flake8-no-pep420: prevents implicit namespace packages by requiring __init__.py
    "PGH",   # pygrep-hooks: detects deprecated and dangerous code patterns
    "PL",    # Pylint: comprehensive source code analyzer for enforcing coding standards and detecting errors
    "RSE",   # flake8-raise: ensures exceptions are raised correctly
    "S",     # flake8-bandit: detects security issues and vulnerabilities in the code
    "SLF",   # flake8-self: prevents incorrect usage of the self argument in class methods
    "T10",   # flake8-debugger: detects the presence of debugging tools such as pdb
    "T20",   # flake8-print: detects print statements left in the code
    "UP",    # pyupgrade: automatically upgrades syntax for newer versions of Python
    "W",     # Warning: provides warnings about potential issues in the code
    "YTT",   # flake8-2020: identifies code that will break with future Python releases

    # Code Documentation
    "FIX", # flake8-fixme: detects FIXMEs and other temporary comments that should be resolved
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "ARG",     # Unused function args allowed in tests
    "PLR2004", # Magic value used in comparison
    "TCH002",  # No import only type checking in tests
    "SLF001",  # enable private member access in tests
    "S105",    # allow hardcoded passwords in tests
    "S106",    # allow hardcoded passwords in tests
    "S311",    # allow standard pseudo-random generators in tests
    "PT011",   # allow generic exceptions in tests
    "N806",    # allow uppercase variable names in tests
    "PGH003",  # allow general ignores in tests
    "PLR0915", # allow complex statements in tests
    "S603",    # allow subprocess with untrusted input in tests
    "S607",    # allow partial executable paths in tests
    "T201",    # allow print in tests
]
"examples/**/*.py" = [
    "T201",    # allow print in examples
    "INP001",  # allow implicit namespace packages
]

[tool.ruff.lint.isort]
known-first-party = ["project_name", "tests"]

[tool.pytest.ini_options]
addopts = "-s -vvv --cache-clear"
asyncio_mode = "auto"
markers = [
    "smoke: quick tests to check basic functionality",
    "sanity: detailed tests to ensure major functions work correctly",
    "regression: tests to ensure that new changes do not break existing functionality",
    "e2e: end-to-end integration tests",
    "unit: unit tests",
    "integration: integration tests"
]
testpaths = ["tests"]

[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
preserve_quotes = true
